# Raefile

./: CMakeLists.txt  generate_icons.py  install.sh
include/core/: FileSystemEngine.h
include/ui/: FileListWidget.h  MainWindow.h
src/: main.cpp
src/core/: FileSystemEngine.cpp
src/ui/: FileListWidget.cpp  MainWindow.cpp
